force-app/main/default/objects/Crossword_Guess__c/Crossword_Guess__c.object-meta.xml
<CustomObject>
    <label>Crossword Guess</label>
    <nameField>
        <displayFormat>GN-{0000}</displayFormat>
        <label>Guess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grossword Guesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>