force-app/main/default/objects/Crossword_Guess__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <label>Attempt</label>
    <referenceTo>Crossword_Attempt__c</referenceTo>
    <relationshipLabel>Guesses</relationshipLabel>
    <relationshipName>Crossword_Guesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>