force-app/main/default/objects/Crossword_Guess__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>