force-app/main/default/objects/Crossword_Guess__c/fields/Square_Id__c.field-meta.xml
<CustomField>
    <fullName>Square_Id__c</fullName>
    <label>Square Id</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>